--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:stretch
+FROM debian:buster
 RUN apt-get update && \
        apt-get install -y git awscli gnupg gnupg2 zip unzip curl apt-transport-https software-properties-common && \
        useradd -ms /bin/bash mvp
