--- a/python/Dockerfile.template
+++ b/python/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM mvpstudio/base:v2
+FROM mvpstudio/base:{{ base }}
 
 RUN apt-get update -y && \
     apt-get install -y python3 python3-dev python3-pip
