--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,115 +1,14 @@
 version: 2
 jobs:
-  base:
-    docker:
-      - image: circleci/python:3
-    steps:
+  build:
+     docker:
+      - image: circleci/python:3.7.9-buster
+     steps:
       - setup_remote_docker
       - checkout
       - run:
-          name: Build/Tag/Push Docker Image
+          name: build_and_push
           command: |
+            pip install -r requirements.txt
             echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-
-            docker build ./base -t mvpstudio/base:v2
-            docker push mvpstudio/base:v2
-
-  node:
-    docker:
-      - image: circleci/python:3
-    steps:
-      - setup_remote_docker
-      - checkout
-      - run:
-          name: Build/Tag/Push Docker Image
-          command: |
-            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-
-            docker build ./node/10 -t mvpstudio/node:10
-            docker push mvpstudio/node:10
-
-  java:
-    docker:
-      - image: circleci/python:3
-    steps:
-      - setup_remote_docker
-      - checkout
-      - run:
-          name: Build/Tag/Push Docker Image
-          command: |
-            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-
-            docker build ./java/8 -t mvpstudio/java:8
-            docker push mvpstudio/java:8
-
-  golang:
-    docker:
-      - image: circleci/python:3
-    steps:
-      - setup_remote_docker
-      - checkout
-      - run:
-          name: Build/Tag/Push Docker Image
-          command: |
-            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-
-            docker build ./golang/1.12 -t mvpstudio/golang:1.12
-            docker push mvpstudio/golang:1.12
-
-  python:
-    docker:
-      - image: circleci/python:3
-    steps:
-      - setup_remote_docker
-      - checkout
-      - run:
-          name: Build/Tag/Push Docker Image
-          command: |
-            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-
-            docker build ./python -t mvpstudio/python:v4
-            docker push mvpstudio/python:v4
-
-  mysql-client:
-    docker:
-      - image: circleci/python:3
-    steps:
-      - setup_remote_docker
-      - checkout
-      - run:
-          name: Build/Tag/Push Docker Image
-          command: |
-            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-
-            docker build ./mysql-client -t mvpstudio/mysql-client
-            docker push mvpstudio/mysql-client
-
-workflows:
-  version: 2
-  build-publish-all:
-    jobs:
-      - base:
-          context: dockerhub-publish
-          filters:
-            branches:
-              only: master
-      - node:
-          context: dockerhub-publish
-          requires:
-            - base
-      - java:
-          context: dockerhub-publish
-          requires:
-            - base
-      - golang:
-          context: dockerhub-publish
-          requires:
-            - base
-      - python:
-          context: dockerhub-publish
-          requires:
-            - base
-      - mysql-client:
-          context: dockerhub-publish
-          requires:
-            - base
+            python build-push.py
